<resources>
    <string name="app_name">Room Database</string>
    <string name="welcome">Welcome</string>
    <string name="name_hint">Enter your name</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_close">Close</string>
    <string name="btn_add_to_cart">Add to Cart</string>
    <string name="name">Name</string>
    <string name="profile_logo_desc">Profile Logo</string>
    <string name="app_logo_desc">App Logo</string>
    <string name="welcome_home">Hay, %1$s</string>
    <string name="your_progress">Your Progress</string>
    <string name="active_users">Active Users: 1,234</string>
    <string name="popular_tasks">Popular Tasks</string>
    <string name="analytics">Analytics</string>
    <string name="reports">Reports</string>
    <string name="icon_desc">Icon</string>
    <string name="nav_home">Home</string>
    <string name="nav_product">Product</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_profile">Profile</string>
    <string name="search_hint">Search products&#8230;</string>
    <string name="sort_desc">Sort</string>
    <string name="category_title">Category</string>
    <string name="cat_all">All</string>
    <string name="cat_electronics">Electronics</string>
    <string name="cat_fashion">Fashion</string>
    <string name="cat_groceries">Groceries</string>
    <string name="cat_home">Home</string>
    <string name="cat_beauty">Beauty</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="already_have_account">Already have an account? Sign In</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="profile_picture_desc">Profile Picture</string>
    <string name="user_name_default">User Name</string>
    <string name="phone_label">Phone</string>
    <string name="mail_label">Mail</string>
    <string name="dark_mode_label">Dark mode</string>
    <string name="profile_details_label">Profile details</string>
    <string name="settings_label">Settings</string>
    <string name="log_out_label">Log out</string>
</resources>