<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Bottom Navigation Section -->
    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/nav_item_active"
            android:gravity="center"
            android:text="@string/nav_home"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/navProduct"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/nav_item_inactive"
            android:gravity="center"
            android:text="@string/nav_product"
            android:textColor="@color/primary_gold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/navCart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/nav_item_inactive"
            android:gravity="center"
            android:text="@string/nav_cart"
            android:textColor="@color/primary_gold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/navProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/nav_item_inactive"
            android:gravity="center"
            android:text="@string/nav_profile"
            android:textColor="@color/primary_gold"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>